# Witt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md
.claude/: settings.json
openspec/changes/advanced-features/: .openspec.yaml
openspec/changes/archive/2026-02-19-ui-first-capture/: design.md  proposal.md  tasks.md
openspec/changes/audio-recording/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/audio-recording/specs/audio-upload/: spec.md
openspec/changes/audio-recording/specs/recording-capture/: spec.md
openspec/changes/audio-recording/specs/transcript-editor/: spec.md
openspec/changes/audio-recording/specs/word-extraction/: spec.md
openspec/changes/cloud-sync-interface/: .openspec.yaml
openspec/changes/context-inbox/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/context-inbox/specs/inbox-management/: spec.md
openspec/changes/context-inbox/specs/inbox-ui/: spec.md
openspec/changes/context-inbox/specs/integration/: spec.md
openspec/changes/context-inbox/specs/quick-capture/: spec.md
openspec/changes/context-inbox/specs/word-extraction/: spec.md
openspec/changes/core-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/core-infrastructure/specs/media-management/: spec.md
openspec/changes/core-infrastructure/specs/witt-core/: spec.md
openspec/changes/ios-platform/: .openspec.yaml
openspec/changes/web-platform/: .openspec.yaml
openspec/changes/witt-core-refactor/: proposal.md  tasks.md
openspec/changes/witt-core-refactor/specs/anki-integration/: spec.md
openspec/changes/witt-core-refactor/specs/data-migration/: spec.md
openspec/specs/capture-popup/: spec.md
openspec/specs/library-view/: spec.md
openspec/specs/mock-backend/: spec.md
openspec/specs/video-player/: spec.md
witt-core/: Cargo.toml
witt-core/src/: anki.rs  config.rs  context.rs  error.rs  extraction.rs  inbox.rs  lib.rs  logging.rs  media.rs  migration.rs  note.rs  search.rs  source.rs
witt-core/src/db/: mod.rs  sqlite.rs
witt-core/tests/: context_inbox.rs
witt-tauri/: .gitignore  README.md
witt-tauri/src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
witt-tauri/src-tauri/capabilities/: default.json
witt-tauri/src-tauri/icons/: icon.icns
witt-tauri/src-tauri/scripts/: request-accessibility.sh
witt-tauri/src-tauri/src/: commands.rs  main.rs  mock_store.rs  models.rs  tray.rs
witt-tauri/ui/: .eslintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-capture-window.html  test-capture-window.js  tsconfig.json  tsconfig.test.json  vite.config.ts
witt-tauri/ui/src/: App.e2e.test.tsx  App.tsx  index.css  types.ts
witt-tauri/ui/src/components/: ContextMenuHandler.tsx  GlobalCaptureToast.tsx  GlobalHotkeyToast.tsx  GlobalShortcuts.test.tsx  GlobalShortcuts.tsx  Loading.tsx  MockModeBanner.tsx  Toaster.tsx
witt-tauri/ui/src/components/anki/: AnkiSyncModal.tsx
witt-tauri/ui/src/lib/: anki.ts  apkg.ts  captureWindow.ts  cardGenerator.ts  commands.ts  errors.ts  loading.ts  notifications.ts  utils.ts
witt-tauri/ui/src/stores/: useCaptureStore.ts  useHotkeyToastStore.ts  useInboxStore.ts  useLibraryStore.ts  useLoadingStore.ts  useSettingsStore.ts  useToastStore.ts  useVideoStore.ts
witt-tauri/ui/src/test/: localStorageMock.cjs  localStorageMock.ts  setup.ts
witt-tauri/ui/src/types/: video.ts
witt-tauri/ui/src/utils/: getCurrentWindowTitle.ts
(+35 files in other folders)
