[workspace]
resolver = "2"
members = ["witt-core", "witt-tauri/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eka"]
license = "MIT"
repository = "https://github.com/eka/witt"

[workspace.dependencies]
# WittCore
witt-core = { path = "./witt-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
