[package]
name = "witt-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
witt-core.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
rust-stemmers = "1.2"
device_query = "1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
